--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -56,6 +56,7 @@
     "immutable": "3.8.1",
     "isomorphic-fetch": "2.2.1",
     "keymirror": "0.1.1",
+    "lodash.flow": "3.5.0",
     "mobx": "2.6.0",
     "mobx-react": "3.5.7",
     "mobx-utils": "1.1.2",
@@ -65,6 +66,9 @@
     "react-addons-css-transition-group": "15.4.2",
     "react-addons-update": "15.4.2",
     "react-autocomplete": "1.4.0",
+    "react-beautiful-dnd": "2.4.0",
+    "react-dnd": "2.5.4",
+    "react-dnd-html5-backend": "2.5.4",
     "react-dom": "15.4.2",
     "react-i18next": "1.10.1",
     "react-redux": "4.4.5",
