--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -53,6 +53,7 @@
     "mobx-utils": "1.1.2",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
+    "react-beautiful-dnd": "2.6.4",
     "react-dom": "15.4.2",
     "react-router": "2.8.1"
   },
