--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -55,6 +55,8 @@
     "mobx-utils": "1.1.2",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
+    "react-dnd": "2.5.4",
+    "react-dnd-html5-backend": "2.5.4",
     "react-dom": "15.4.2",
     "react-router": "2.8.1"
   },
